fixed contact page spacing

--- a/src/pages/ContactUs/main.css
+++ b/src/pages/ContactUs/main.css
@@ -118,7 +118,10 @@
 
 @media (min-width: 768px) {
   .md-grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
   }
 }
